@@ -372,49 +372,27 @@ void CIMDB::GetURL(const CStdString &strMovie, CStdString& strURL)
   strTmp = strTmp.Trim();
   strcpy(szMovie, strTmp.c_str());
 
-  RemoveAllAfter(szMovie, " divx ");
-  RemoveAllAfter(szMovie, " xvid ");
-  RemoveAllAfter(szMovie, " dvd ");
-  RemoveAllAfter(szMovie, " svcd ");
-  RemoveAllAfter(szMovie, " ac3 ");
-  RemoveAllAfter(szMovie, " ogg ");
-  RemoveAllAfter(szMovie, " ogm ");
-  RemoveAllAfter(szMovie, " internal ");
-  RemoveAllAfter(szMovie, " fragment ");
-  RemoveAllAfter(szMovie, " dvdrip ");
-  RemoveAllAfter(szMovie, " proper ");
-  RemoveAllAfter(szMovie, " limited ");
-  RemoveAllAfter(szMovie, " rerip ");
-  RemoveAllAfter(szMovie, " custom ");
-  RemoveAllAfter(szMovie, " dvdscr ");
-  RemoveAllAfter(szMovie, " unrated ");
-  RemoveAllAfter(szMovie, " multisubs ");
-  RemoveAllAfter(szMovie, " ws ");
-  RemoveAllAfter(szMovie, " swedish ");
-  RemoveAllAfter(szMovie, " pal ");
-  RemoveAllAfter(szMovie, " ntsc ");
-
-  RemoveAllAfter(szMovie, "+divx+");
-  RemoveAllAfter(szMovie, "+xvid+");
-  RemoveAllAfter(szMovie, "+dvd+");
-  RemoveAllAfter(szMovie, "+svcd+");
-  RemoveAllAfter(szMovie, "+ac3+");
-  RemoveAllAfter(szMovie, "+ogg+");
-  RemoveAllAfter(szMovie, "+ogm+");
-  RemoveAllAfter(szMovie, "+internal+");
-  RemoveAllAfter(szMovie, "+fragment+");
-  RemoveAllAfter(szMovie, "+dvdrip+");
-  RemoveAllAfter(szMovie, "+proper+");
-  RemoveAllAfter(szMovie, "+limited+");
-  RemoveAllAfter(szMovie, "+rerip+");
-  RemoveAllAfter(szMovie, "+custom+");
-  RemoveAllAfter(szMovie, "+dvdscr+");
-  RemoveAllAfter(szMovie, "+unrated+");
-  RemoveAllAfter(szMovie, "+multisubs+");
-  RemoveAllAfter(szMovie, "+ws+");
-  RemoveAllAfter(szMovie, "+swedish+");
-  RemoveAllAfter(szMovie, "+pal+");
-  RemoveAllAfter(szMovie, "+ntsc+");
+  RemoveAllAfter(szMovie, "+divx");
+  RemoveAllAfter(szMovie, "+xvid");
+  RemoveAllAfter(szMovie, "+dvd");
+  RemoveAllAfter(szMovie, "+svcd");
+  RemoveAllAfter(szMovie, "+ac3");
+  RemoveAllAfter(szMovie, "+ogg");
+  RemoveAllAfter(szMovie, "+ogm");
+  RemoveAllAfter(szMovie, "+internal");
+  RemoveAllAfter(szMovie, "+fragment");
+  RemoveAllAfter(szMovie, "+dvdrip");
+  RemoveAllAfter(szMovie, "+proper");
+  RemoveAllAfter(szMovie, "+limited");
+  RemoveAllAfter(szMovie, "+rerip");
+  RemoveAllAfter(szMovie, "+custom");
+  RemoveAllAfter(szMovie, "+dvdscr");
+  RemoveAllAfter(szMovie, "+unrated");
+  RemoveAllAfter(szMovie, "+multisubs");
+  RemoveAllAfter(szMovie, "+ws");
+  RemoveAllAfter(szMovie, "+swedish");
+  RemoveAllAfter(szMovie, "+pal");
+  RemoveAllAfter(szMovie, "+ntsc");
 
   // sprintf(szURL,"http://us.imdb.com/Tsearch?title=%s", szMovie);
   // strURL = szURL;
